# each-way-matcher

./: .deepsource.toml  .env.template  .gitignore  .pylintrc  Pipfile  README.md  TODO.md  betfair_api.py  bookies_df  calculate.py  calculate_odds.py  cron.sh  format_date.py  graph.py  index.md  main.py  odds_df  odds_monkey.py  original.py  output.py  pyproject.toml  races_df  relative-prob.py  requirements.txt  results.csv  returns-12-05-2021.csv  returns-15-06-2021.csv  returns-25-03-2021.csv  returns-26-04-2021.csv  returns-29-06-2021.csv  returns-5.csv  returns.csv  run.ps1  run.py  run.sh  scrape.py  scraper.py  sim.py  sporting_index.py  stats.py  (+2 more)
.github/workflows/: codeql-analysis.yml  main.yml  python-app.yml  python-package.yml
matcher/: __main__.py  betfair.py  betfair_api.py  betfair_scrape.py  calc_places_prob.py  calculate.py  each_way.py  exceptions.py  exchange_place.py  extra_places.py  odds_monkey.py  output.py  race_results.py  run.py  scrape_betfair.py  scrape_extra_places.py  scrape_races.py  setup.py  sporting_index.py  stats.py  william_hill.py
matcher/sites/: betfair.py  betfair_api.py  odds_monkey.py  scrape_betfair.py  scrape_extra_places.py  sporting_index.py  william_hill.py
returns/: returns-old.csv  returns.csv
returns/old-returns/: returns-2.csv  returns-5.csv  returns-old.csv
stats/: returns.csv
