[tool.poetry]
name = "each-way-matcher"
version = "0.1.0"
description = ""
authors = ["Tom Pollak <tompollak1000@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
numpy = "^1.21.3"
pandas = "^1.3.4"
scipy = "^1.7.1"
requests = "^2.26.0"
selenium = "^4.0.0"
python-dotenv = "^0.19.1"
beautifulsoup4 = "^4.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
